<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.GameScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3DA5EA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hp"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/HPStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/hpAmount_hint"
                android:inputType="numberSigned"
                android:textSize="20sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/Weapon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/WeaponName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weaponName"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/gameScreenText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:textSize="30sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/choiceButton1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/choiceButton2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/choiceButton3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/choiceButton4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/inventory" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
